# whisperengine-v2

./: .dockerignore  .env.adaptive  .env.bot.template  .env.containerized.template  .env.desktop  .env.development  .env.discord  .env.dream.example  .env.elena.example  .env.example  .env.example_worker  .env.gabriel.example  .env.marcus-chen.example  .env.marcus.example  .env.multi-bot.example  .env.multi-entity.example  .env.production  .env.quickstart  .env.quickstart.template  .env.remote  .env.template  .env.test-concurrent  .env.worker.template  .gitignore  .setup_complete  AI_FEATURES_RECOMMENDATIONS.md  AI_SYSTEM_ANALYSIS_SUMMARY.md  API_METADATA_LEVELS_AUDIT_COMPLETE.md  ARCHIVED_BRANCH_unified-memory-manager.md  BOT_NAME_NORMALIZATION_COMPLETE.md  BUILD_AND_USER_GUIDE.md  BUILD_GUIDE.md  BUILD_SYSTEM.md  BUILD_SYSTEM_GUIDE.md  CDL_AI_ETHICS_ARCHITECTURE.md  CDL_ARCHITECTURE_IMPROVEMENT_COMPLETE.md  CDL_BACKUP_COMPLETE_SOLUTION.md  CDL_CHARACTER_SYSTEM_DEBUGGING_SUMMARY.md  CDL_DATABASE_INTEGRATION_COMPLETE.md  CDL_GRAPH_ENHANCEMENTS_ANALYSIS.md  (+746 more)
.github/: DOCKER_HUB_SETUP.md  copilot-instructions.md
alembic/: README.md  env.py  script.py.mako
benchmarks/: metrics_baseline.json
cdl-web-ui/: CDL_WEB_UI_COMPLETE_FIX_SESSION_SUMMARY.md  COMPLETE_TAB_VERIFICATION.md  COMPREHENSIVE_AUDIT_AND_FIXES.md  DATABASE_TRANSACTION_AUDIT.md  DATABASE_TRANSACTION_FIXES_COMPLETED.md  Dockerfile  Dockerfile.dev  FIELD_LIMITS_AUDIT.md  README.md  TRANSACTION_FIXES_SUMMARY.md  YAML_EXPORT_IMPORT_AUDIT.md  YAML_EXPORT_IMPORT_FIXES_COMPLETED.md  dev.sh  docker-compose.yml  next.config.ts  package-lock.json  package.json
characters/: README.md  background.yaml.template  character.md.template  core.yaml.template  default_assistant.json  evolution.yaml.template  goals.yaml.template  lurk_triggers.yaml.template  ux.yaml.template
complete_prompt_examples/: aethys_complete_prompt_example.md  dream_complete_prompt_example.md  elena_complete_prompt_example.md  gabriel_complete_prompt_example.md  jake_complete_prompt_example.md  marcus_complete_prompt_example.md  ryan_complete_prompt_example.md  sophia_complete_prompt_example.md
config/: phantom_features_basic.env  phantom_features_development.env  phantom_features_production.env
dashboards/: README.md  README_PRODUCTION_METRICS.md  character_emotional_evolution.json  character_emotional_evolution.json.backup  learning_system_telemetry.json  whisperengine_character_development_dashboard.json  whisperengine_character_emotional_evolution_dashboard.json  whisperengine_character_performance_dashboard.json  whisperengine_confirmed_character_analytics_dashboard.json  whisperengine_confirmed_performance_dashboard.json  whisperengine_confirmed_real_time_dashboard.json  whisperengine_conversation_quality_dashboard.json  whisperengine_emotion_analysis_dashboard.json  whisperengine_performance_optimization_dashboard.json  whisperengine_production_metrics.json  whisperengine_real_time_operations_dashboard.json  whisperengine_relationship_analytics_dashboard.json  whisperengine_synthetic_testing_dashboard.json  whisperengine_system_health_dashboard.json  whisperengine_vector_memory_dashboard.json  working_emotion_dashboard.json  wrapped_emotion_dashboard.json
data/: character_memories_demo_elena_rodriguez.db
debugs/: debug_bot_core_memory.py  debug_production_init.py
demos/: character_memories_elena_vasquez_researcher.db  character_memories_test_elena.db  demo_complete_phase4_system.py  demo_concurrent_conversations.py  demo_faiss_performance.py  demo_memory_batching.py  demo_phase4_2_thread_management.py  demo_phase4_3_proactive_engagement.py  demo_production_concurrency.py  demo_production_integration.py  demo_settings_features.py  demo_system_tray.py  demo_vectorized_emotion.py
desktop-app/: .env.example  run-desktop.py
discord-bot/: .env.example  docker-compose.yml  run-discord.py
docker/: .dockerignore  Dockerfile  Dockerfile.chromadb  Dockerfile.enrichment-worker  Dockerfile.multi-stage  README.md  qdrant_config.yml
docs/: 7D_DEPLOYMENT_GUIDE.md  7D_IMPLEMENTATION_STATUS.md  7D_SYSTEM_COMPLETE.md  7D_TESTING_SESSION_SUMMARY.md  7D_VALIDATION_NOTES.md  AETHERIS_MIGRATION_REPORT.md  AI_CHARACTER_DESIGN_PHILOSOPHY.md  AI_SELF_INITIALIZATION_ANALYSIS.md  API_REFERENCE.md  ARIA_RESPONSE_LENGTH_TEST_ANALYSIS.md  BOTH_TASKS_COMPLETE.md  BOT_CONFIGURATION_AUDIT_v2.5.md  BOT_NAME_NORMALIZATION_FIXES.md  BOUNDARY_MANAGER_ANALYSIS.md  BOUNDARY_MANAGER_REMOVAL_PLAN.md  BUG_FIXES_SUMMARY.md  BUG_FIX_IMPLEMENTATION_LOG.md  BUG_FIX_ROLE_EXTRACTION.md  BUG_FIX_SESSION_COMPLETE.md  CDL_DATABASE_GUIDE.md  CDL_DOCUMENTATION_ENHANCEMENT_SUMMARY.md  CDL_SINGLETON_MIGRATION_TODO.md  CDL_TAXONOMY_INTEGRATION_ANALYSIS.md  CHARACTER_GRAPH_MEMORY_GUIDE.md  CHARACTER_TUNING_GUIDE.md  CODE_CHANGES_DUPLICATE_INSIGHT_FIX.md  CODE_REVIEW_BUG_FIXES.md  CONCURRENCY_ANALYSIS.md  CONVERSATION_CONTEXT_BUG_FIX.md  CONVERSATION_CONTEXT_MANAGEMENT.md  CREATING_NEW_CHARACTERS.md  DATABASE_QUERY_OPTIMIZATION.md  DESIGN_GAP_ANALYSIS_USER_PREFERENCES.md  DISCORD_BOT_SETUP.md  DOCUMENTATION_REORGANIZATION.md  DREAM_7D_VALIDATION_RESULTS.md  DUPLICATE_INSIGHT_FIX_SUMMARY.md  DYNAMIC_VS_DECLARATIVE_TRANSACTIONS.md  ELENA_7D_TESTING_GUIDE.md  EMOJI_TAXONOMY_CRITICAL_ANALYSIS.md  (+83 more)
examples/: bot_with_external_api.py
experiments/: NATIVE_SETUP.md  README.md  install_ml_deps.sh  start_jupyter_native.sh
grafana-config/: dashboard.yml  datasource.yml
grafana_dashboards/: DASHBOARD_INSTALLED.md  DATASOURCE_FIX_LOG.md  IMPORT_GUIDE.md  QUICKSTART.md  README_CHARACTER_EVOLUTION.md  README_LEARNING_TELEMETRY.md  vector_classification_intelligence.json
migrations/: 0001_baseline.sql  001_expand_cdl_schema_full_fidelity.sql  002_ai_generated_character_data.sql  002_migrate_json_to_relational.sql  002_sophia_cdl_data.sql  003_jake_cdl_data.sql  005_comprehensive_cdl_schema.sql  006_comprehensive_cdl_schema.sql  README.md  normalize_conversation_flow_guidance.sql
migrations_v2/: env.py
mocks/: mock_llm_server.py
privacy_data/: context_boundary_audit.json  (+1 more)
prompts/: README.md  (+14 more)
(+3345 files in other folders)
