[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperengine"
version = "2.2.0"
description = "WhisperEngine - Privacy-first AI conversation and roleplay platform"
authors = [{name = "whisperengine-ai", email = "contact@whisperengine.ai"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
keywords = ["discord", "bot", "ai", "memory", "privacy", "personality", "whisperengine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Discord Bot Dependencies
    "discord.py>=2.6.4",  # Updated Nov 2025
    "python-dotenv>=1.1.1",
    
    # HTTP Client Dependencies  
    "aiohttp>=3.12.15",
    "requests>=2.32.5",
    
    # AI/ML and Memory System Dependencies
    "qdrant-client>=1.16.0",  # Local vector database (Docker)
    "fastembed>=0.7.3",  # Local embeddings (Python 3.13 compatible)
    "numpy>=1.26.0,<3.0.0",  # Essential vector operations (2.x breaking)
    "redis>=5.0.0,<7.0.0",  # Session cache only (6.x is major bump)
    
    # Image Processing Dependencies
    "Pillow>=11.0.0",  # Updated Nov 2025
    
    # Async File I/O Dependencies
    "aiofiles>=24.1.0",  # Updated Nov 2025
    
    # Voice functionality dependencies (optional)
    "PyNaCl>=1.5.0",
    "audioop-lts>=0.2.0; python_version >= '3.13'",
    "elevenlabs>=1.50.0",  # Updated Nov 2025

    # AI & Orchestration - pinned to 0.3.x for stability
    "langchain>=0.3.0,<0.4.0",  # Updated Nov 2025
    "langchain-community>=0.3.0,<0.4.0",  # Updated Nov 2025
        "langchain-openai>=0.3.0,<0.4.0",
    "langgraph>=0.0.10",
    "openai>=1.82.0",
    "ddgs>=9.9.0",
    
    # Document Processing
    "docx2txt>=0.8",  # Word Documents
    "pypdf>=5.0.0",  # Updated Nov 2025

    # Database Drivers
    "psycopg2-binary>=2.9.10",  # PostgreSQL adapter
    "asyncpg>=0.30.0",  # PostgreSQL - Updated Nov 2025
    "neo4j>=5.28.0",  # Neo4j - Updated Nov 2025
    "influxdb-client>=1.49.0",  # InfluxDB - Updated Nov 2025

    # API
    "fastapi>=0.115.0",  # Updated Nov 2025
    "uvicorn>=0.34.0",  # Updated Nov 2025

    # Utilities
    "alembic>=1.14.0",  # Migrations - Updated Nov 2025
    "tenacity>=9.0.0",  # Retries - Updated Nov 2025
    "loguru>=0.7.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "arq>=0.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",  # Updated Nov 2025
    "pytest-cov>=6.0.0",  # Updated Nov 2025
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",  # Updated Nov 2025
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-html>=4.1.1",
    "coverage[toml]>=7.6.9",  # Updated Nov 2025
    "psutil>=7.1.0",
]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "mypy>=1.14.0",  # Updated Nov 2025
    "pre-commit>=4.0.0",  # Updated Nov 2025
    "debugpy>=1.8.9",  # Updated Nov 2025
    "ipython>=8.30.0",  # Updated Nov 2025
    "jupyter>=1.1.1",
    "ruff>=0.8.0",  # Updated Nov 2025
]

[project.urls]
Homepage = "https://github.com/whisperengine-ai/whisperengine-v2"
Repository = "https://github.com/whisperengine-ai/whisperengine-v2.git"
Issues = "https://github.com/whisperengine-ai/whisperengine-v2/issues"

[project.scripts]
whisperengine = "src_v2.main:main"
whisperengine-bot = "src_v2.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src_v2*"]

[tool.setuptools.package-data]
"src_v2.config" = ["*.md", "*.example"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | logs
  | temp_images
  | __pycache__
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]  # Only syntax errors and undefined names
ignore = []

[tool.coverage.run]
source = ["src_v2"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src_v2 --cov-report=term-missing --cov-report=html"
testpaths = ["tests_v2"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (may use real services)", 
    "performance: marks tests as performance/benchmark tests",
    "security: marks tests as security validation tests",
    "slow: marks tests as slow running",
    "llm: marks tests that require LLM service integration",
]

[tool.mypy]
python_version = "3.13"
# Gradual adoption mode - lenient settings to start
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for gradual adoption
disallow_incomplete_defs = false  # Too strict for gradual adoption
check_untyped_defs = true  # Check types even if no annotations
disallow_untyped_decorators = false  # Too strict
no_implicit_optional = false  # Allow Optional[T] = None pattern
warn_redundant_casts = true
warn_unused_ignores = false  # Avoid noise during gradual adoption
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Show error codes to help understand issues
show_error_codes = true
# Exclude deprecated files
exclude = [
]

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "qdrant_client.*",
    "fastembed.*",
    "elevenlabs.*",
    "redis.*",
    "audioop_lts.*",
    "psycopg2.*",
    "influxdb_client.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true
