[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperengine"
version = "2.2.1"
description = "WhisperEngine - Privacy-first AI conversation and roleplay platform"
authors = [{name = "whisperengine-ai", email = "contact@whisperengine.ai"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
keywords = ["discord", "bot", "ai", "memory", "privacy", "personality", "whisperengine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Discord Bot Dependencies
    "discord.py>=2.6.4",
    "python-dotenv>=1.1.1",
    
    # HTTP Client Dependencies  
    "aiohttp>=3.12.15",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    
    # AI/ML and Memory System Dependencies
    "qdrant-client>=1.16.0",  # Local vector database (Docker)
    "fastembed>=0.7.3",  # Local embeddings (Python 3.13 compatible)
    "numpy>=2.3.5,<3.0.0",  # Essential vector operations (2.x breaking)
    "redis>=5.3.1,<7.0.0",  # Session cache only (6.x is major bump)
    "sympy>=1.14.0",
    
    # Image Processing Dependencies
    "Pillow>=11.3.0",
    
    # Async File I/O Dependencies
    "aiofiles>=24.1.0",
    
    # Voice functionality dependencies (optional)
    "PyNaCl>=1.5.0",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "elevenlabs>=2.16.0",

    # AI & Orchestration - pinned to 0.3.x for stability
    "langchain>=0.3.27,<0.4.0",
    "langchain-community>=0.3.31,<0.4.0",
    "langchain-openai>=0.3.35,<0.4.0",
    "langgraph>=1.0.1",
    "langsmith>=0.4.46",
    "openai>=2.8.1",
    "ddgs>=9.9.2",
    
    # Document Processing
    "docx2txt>=0.9",  # Word Documents
    "pypdf>=6.3.0",

    # Database Drivers
    "psycopg2-binary>=2.9.11",  # PostgreSQL adapter
    "asyncpg>=0.30.0",
    "neo4j>=6.0.3",
    "influxdb-client>=1.49.0",

    # API
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",

    # Utilities
    "alembic>=1.17.2",
    "tenacity>=9.1.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "arq>=0.26.3",
    "PyYAML>=6.0.3",
    "rich>=14.2.0",
    "pytz>=2025.2",
    "dateparser>=1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",  # Updated Nov 2025
    "pytest-cov>=6.0.0",  # Updated Nov 2025
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",  # Updated Nov 2025
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-html>=4.1.1",
    "coverage[toml]>=7.6.9",  # Updated Nov 2025
    "psutil>=7.1.0",
]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "mypy>=1.14.0",  # Updated Nov 2025
    "pre-commit>=4.0.0",  # Updated Nov 2025
    "debugpy>=1.8.9",  # Updated Nov 2025
    "ipython>=8.30.0",  # Updated Nov 2025
    "jupyter>=1.1.1",
    "ruff>=0.8.0",  # Updated Nov 2025
]

[project.urls]
Homepage = "https://github.com/whisperengine-ai/whisperengine-v2"
Repository = "https://github.com/whisperengine-ai/whisperengine-v2.git"
Issues = "https://github.com/whisperengine-ai/whisperengine-v2/issues"

[project.scripts]
whisperengine = "src_v2.main:main"
whisperengine-bot = "src_v2.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src_v2*"]

[tool.setuptools.package-data]
"src_v2.config" = ["*.md", "*.example"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | logs
  | temp_images
  | __pycache__
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]  # Only syntax errors and undefined names
ignore = []

[tool.coverage.run]
source = ["src_v2"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src_v2 --cov-report=term-missing --cov-report=html"
testpaths = ["tests_v2"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (may use real services)", 
    "performance: marks tests as performance/benchmark tests",
    "security: marks tests as security validation tests",
    "slow: marks tests as slow running",
    "llm: marks tests that require LLM service integration",
]

[tool.mypy]
python_version = "3.13"
# Gradual adoption mode - lenient settings to start
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for gradual adoption
disallow_incomplete_defs = false  # Too strict for gradual adoption
check_untyped_defs = true  # Check types even if no annotations
disallow_untyped_decorators = false  # Too strict
no_implicit_optional = false  # Allow Optional[T] = None pattern
warn_redundant_casts = true
warn_unused_ignores = false  # Avoid noise during gradual adoption
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Show error codes to help understand issues
show_error_codes = true
# Exclude deprecated files
exclude = [
]

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "qdrant_client.*",
    "fastembed.*",
    "elevenlabs.*",
    "redis.*",
    "audioop_lts.*",
    "psycopg2.*",
    "influxdb_client.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true
